kubernetes/games/glusterfs.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-cluster
  namespace: games
  labels:
    storage.k8s.io/name: glusterfs
subsets:
  - addresses:
      - ip: 172.16.1.10
        hostname: zevrant-01
      - ip: 172.16.1.9
        hostname: zevrant-02
      - ip: 172.16.1.7
        hostname: zevrant-03
      - ip: 172.16.1.8
        hostname: zevrant-04
      - ip: 172.16.1.13
        hostname: zevrant-05
      - ip: 172.16.1.14
        hostname: zevrant-06
    ports:
      - port: 1

---

apiVersion: v1
kind: Service
metadata:
  name: glusterfs-cluster
  namespace: games
spec:
  ports:
    - port: 1
