kubernetes/games/minecraft-atm8-with-hannah.yml
apiVersion: v1
kind: Service
metadata:
  name: minecraft-atm8-with-hannah
  namespace: games
spec:
  type: LoadBalancer
  ports:
    - port: 25565
      targetPort: 25565
      protocol: TCP
      name: tcp
  selector:
    app: minecraft-atm8-with-hannah

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft-atm8-with-hannah
  namespace: games
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "https"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: minecraft.zevrant-services.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minecraft-atm8-with-hannah
                port:
                  name: tcp
  ingressClassName: nginx

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: minecraft-atm8-with-hannah
  namespace: games
  labels:
    app: minecraft-atm8-with-hannah
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: minecraft-atm8-with-hannah
  template:
    metadata:
      labels:
        app: minecraft-atm8-with-hannah
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
      securityContext:
        fsGroup: 10001
        fsGroupChangePolicy: "Always"
      volumes:
        - name: minecraft-server
          persistentVolumeClaim:
            claimName: minecraft-atm8-with-hannah
        - name: minecraft-config
          configMap:
            name: minecraft-atm8-with-hannah-config
        - name: 7dtd-saves

      imagePullSecrets:
        - name: regcred
      containers:
        - name: minecraft
          image: docker.io/zevrant/minecraft-atm8:latest
          imagePullPolicy: Always
          workingDir: /opt/minecraft
          command:
            - /bin/bash
          args:
            - -c
            - |
              /opt/minecraft/startserver.sh
          volumeMounts:
            - name: minecraft-config
              mountPath: /var/minecraft
          ports:
            - containerPort: 25565
              name: tcp
              protocol: TCP
          resources:
            requests:
              cpu: 2000m
              memory: 5Gi
            limits:
              cpu: 6000m
              memory: 12Gi
